--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,23 +1,23 @@
 version: '3.8'
 
 services:
-  db:
-    image: postgres:14
-    container_name: postgres_container
+  postgres:
+    image: postgres:13
+    container_name: postgres_db
     environment:
       POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: dataset_bd
+      POSTGRES_PASSWORD: pass123
+      POSTGRES_DB: dataset_db
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
-      - postgres_network
+      - mynetwork
 
 volumes:
   postgres_data:
 
 networks:
-  postgres_network:
+  mynetwork:
     driver: bridge
