--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,11 +83,13 @@ services:
       - ./dags:/opt/airflow/dags
       - airflow_logs:/opt/airflow/logs
       - airflow_config:/opt/airflow/config
+      - /var/run/docker.sock:/var/run/docker.sock  # Montaje del socket Docker
     networks:
       - mynetwork
     depends_on:
       airflow-init:
         condition: service_completed_successfully
+    user: "root"  # Cambié a root
     command: ["airflow", "webserver"]
 
   airflow-scheduler:
@@ -100,11 +102,13 @@ services:
     volumes:
       - ./dags:/opt/airflow/dags
       - airflow_logs:/opt/airflow/logs
+      - /var/run/docker.sock:/var/run/docker.sock  # Montaje del socket Docker
     networks:
       - mynetwork
     depends_on:
       airflow-init:
         condition: service_completed_successfully
+    user: "root"  # Cambié a root
     command: ["airflow", "scheduler"]
 
   airflow-worker:
@@ -118,11 +122,13 @@ services:
     volumes:
       - ./dags:/opt/airflow/dags
       - airflow_logs:/opt/airflow/logs
+      - /var/run/docker.sock:/var/run/docker.sock  # Montaje del socket Docker
     networks:
       - mynetwork
     depends_on:
       airflow-init:
         condition: service_completed_successfully
+    user: "root"  # Cambié a root
     command: ["airflow", "celery", "worker"]
 
   airflow-triggerer:
@@ -134,9 +140,11 @@ services:
     volumes:
       - ./dags:/opt/airflow/dags
       - airflow_logs:/opt/airflow/logs
+      - /var/run/docker.sock:/var/run/docker.sock  # Montaje del socket Docker
     networks:
       - mynetwork
     depends_on:
       airflow-init:
         condition: service_completed_successfully
+    user: "root"  # Cambié a root
     command: ["airflow", "triggerer"]
