--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,14 +19,21 @@ services:
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: pass123
-      POSTGRES_DB: dataset_db
+      POSTGRES_DB: airflow_db
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./docker/init_data_db.sh:/docker-entrypoint-initdb.d/init_db.sh:ro
     networks:
       - mynetwork
     user: "postgres"  # Forzar que se ejecute con el usuario postgres
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U user -d airflow_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+
 
   redis:
     image: redis:latest
@@ -45,34 +52,36 @@ services:
     image: apache/airflow:2.10.4
     container_name: airflow_init
     environment:
-      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://user:pass123@postgres_db:5432/dataset_db
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://user:pass123@postgres_db:5432/airflow_db
       AIRFLOW__CORE__EXECUTOR: CeleryExecutor
       AIRFLOW__CORE__LOAD_EXAMPLES: "False"
-      AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://user:pass123@postgres_db:5432/dataset_db
+      AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://user:pass123@postgres_db:5432/airflow_db
       AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
     entrypoint: bash -c "
       airflow db init &&
       airflow users create --username admin --firstname Admin --lastname User --role Admin --email admin@example.com --password admin || true &&
       airflow connections delete postgres_default || true &&
-      airflow connections add 'postgres_default' --conn-uri 'postgresql://user:pass123@postgres_db:5432/dataset_db' &&
+      airflow connections add 'postgres_default' --conn-uri 'postgresql://user:pass123@postgres_db:5432/airflow_db' &&
       airflow connections delete airflow_conn || true &&
-      airflow connections add 'airflow_conn' --conn-uri 'http://admin:admin@airflow_webserver:8080'"
+      airflow connections add 'airflow_conn' --conn-uri 'http://admin:admin@airflow_webserver:8080' &&
+      airflow connections delete postgres_data_conn || true &&
+      airflow connections add 'postgres_data_conn' --conn-uri 'postgresql://user:pass123@postgres_db:5432/data_db'"
     networks:
       - mynetwork
     depends_on:
-      - postgres
-
+      postgres:
+        condition: service_healthy
 
   airflow-webserver:
     image: apache/airflow:2.10.4
     container_name: airflow_webserver
     environment:
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://user:pass123@postgres_db:5432/dataset_db
+      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://user:pass123@postgres_db:5432/airflow_db
       AIRFLOW__CORE__EXECUTOR: CeleryExecutor
       AIRFLOW__CORE__LOAD_EXAMPLES: "False"
-      AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://user:pass123@postgres_db:5432/dataset_db
+      AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://user:pass123@postgres_db:5432/airflow_db
       AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
-      AIRFLOW_CONN_POSTGRES_DEFAULT: postgresql+psycopg2://user:pass123@postgres_db:5432/dataset_db
+      AIRFLOW_CONN_POSTGRES_DEFAULT: postgresql+psycopg2://user:pass123@postgres_db:5432/airflow_db
     ports:
       - "8080:8080"
     volumes:
@@ -92,7 +101,7 @@ services:
     image: apache/airflow:2.10.4
     container_name: airflow_scheduler
     environment:
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://user:pass123@postgres_db:5432/dataset_db
+      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://user:pass123@postgres_db:5432/airflow_db
       AIRFLOW__CORE__EXECUTOR: CeleryExecutor
       AIRFLOW__CORE__LOAD_EXAMPLES: "False"
     volumes:
@@ -111,9 +120,9 @@ services:
     image: apache/airflow:2.10.4
     container_name: airflow_worker
     environment:
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://user:pass123@postgres_db:5432/dataset_db
+      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://user:pass123@postgres_db:5432/airflow_db
       AIRFLOW__CORE__EXECUTOR: CeleryExecutor
-      AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://user:pass123@postgres_db:5432/dataset_db
+      AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://user:pass123@postgres_db:5432/airflow_db
       AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
     volumes:
       - ./dags:/opt/airflow/dags
@@ -131,7 +140,7 @@ services:
     image: apache/airflow:2.10.4
     container_name: airflow_triggerer
     environment:
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://user:pass123@postgres_db:5432/dataset_db
+      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://user:pass123@postgres_db:5432/airflow_db
       AIRFLOW__CORE__EXECUTOR: CeleryExecutor
     volumes:
       - ./dags:/opt/airflow/dags
