Imagen de Kedro subida a Dockerhub. Se usa la imagen de Dockerhub en el .yml. Inicio de pruebas en otra maquina

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -156,7 +156,7 @@ services:
 
 
   kedro:
-    image: kedro_img
+    image: franpeca/kedro_img:latest
     container_name: kedro_container
     networks:
       - mynetwork
