--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ networks:
 
 volumes:
   postgres_data:
+  pgadmin_data:
   kedro_data:
   airflow_dags:
   airflow_logs:
@@ -125,7 +126,7 @@ services:
       AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://user:pass123@postgres_db:5432/airflow_db
       AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
     volumes:
-      - ./dags:/opt/airflow/dags
+      - ./dags:/opt/airflow/dags  # Montaje sincrono de los DAGs
       - airflow_logs:/opt/airflow/logs
       - /var/run/docker.sock:/var/run/docker.sock  # Montaje del socket Docker
     networks:
@@ -133,7 +134,7 @@ services:
     depends_on:
       airflow-init:
         condition: service_completed_successfully
-    user: "root"  # Cambié a root
+    user: "root"  # Permiso root (Mala practica)
     command: ["airflow", "celery", "worker"]
 
   airflow-triggerer:
@@ -151,20 +152,43 @@ services:
     depends_on:
       airflow-init:
         condition: service_completed_successfully
-    user: "root"  # Cambié a root
+    user: "root"  # Permiso root (Mala practica)
     command: ["airflow", "triggerer"]
 
 
   kedro:
-    image: franpeca/kedro_img:latest
-    container_name: kedro_container
+    image: franpeca/kedro_img:latest  # Uso de la imagen propia subida a Docker Hub
+    container_name: kedro_container # Nombre del contenedor
     networks:
       - mynetwork
     volumes:
-      - ./kedro_project:/home/kedro_docker/kedro_project:delegated
-      - ./docker/entrypoint.sh:/entrypoint.sh
+      - ./kedro_project:/home/kedro_docker/kedro_project:delegated  # Montaje sincrono del volumen de Kedro
+      - ./docker/entrypoint.sh:/entrypoint.sh # Script de inicio para Kedro
     entrypoint: ["/bin/bash", "/entrypoint.sh"]
     ports:
-      - "8888:8888"
+      - "4141:4141"  # Para Kedro Viz
     user: "kedro_docker"  # Aquí usamos el usuario kedro_docker
-  
+
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_CONFIG_SERVER_MODE: "False"  # Esto es necesario para que no pida agregar servidores manualmente
+      PGADMIN_SERVER_HOST: "postgres_db"  # Nombre del contenedor de PostgreSQL
+      PGADMIN_SERVER_PORT: "5432"         # Puerto estándar de PostgreSQL
+      PGADMIN_SERVER_USER: "user"         # Usuario de PostgreSQL
+      PGADMIN_SERVER_PASSWORD: "pass123"  # Contraseña de PostgreSQL
+      PGADMIN_SERVER_DB: "data_db"     # Base de datos
+    ports:
+      - "5050:80"  # Puerto para acceder a pgAdmin
+    volumes:
+      - ./docker/init_pgadmin.sh:/docker-entrypoint-initdb.d/init_pgadmin.sh:ro
+      - pgadmin_data:/var/lib/pgadmin
+    networks:
+      - mynetwork
+    depends_on:
+      postgres:
+        condition: service_healthy
